tests/neg-custom-args/captures/usingLogFile.check
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:22:14 ------------------------------------------------------
22 |  val later = usingLogFile { f => () => f.write(0) } // error
   |              ^^^^^^^^^^^^
   |       local reference f leaks into outer capture set of type parameter T of method usingLogFile in object Test2
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:27:23 ------------------------------------------------------
27 |  private val later2 = usingLogFile { f => Cell(() => f.write(0)) } // error
   |                       ^^^^^^^^^^^^
   |       local reference f leaks into outer capture set of type parameter T of method usingLogFile in object Test2
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:43:16 ------------------------------------------------------
43 |    val later = usingFile("out", f => (y: Int) => xs.foreach(x => f.write(x + y))) // error
   |                ^^^^^^^^^
   |          local reference f leaks into outer capture set of type parameter T of method usingFile in object Test3
